Mon Jan  8 10:45:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.h:
          Doxygen improvements

        * ace/Select_Reactor_Base.h:
          Changed the way we set the default for the
          ACE_Select_Reactor_Notify::open call, instead of just hardcoding
          the default 0, use the ACE_DISABLE_NOTIFY_PIPE_DEFAULT define
          which is set by default to 0, but which we can set from a
          config file to 1 to disable the notification pipe.

        * ace/config-posix-nonetworking.h:
          Set ACE_DISABLE_NOTIFY_PIPE_DEFAULT to 1. The notification pipe
          doesn't work when networking is fully disabled.

Mon Jan  8 00:10:52 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Adding "!MINIMUM" for the TransportCurrent tests, since it
          precludes the use of the TC functionality.

Sun Jan  7 19:02:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Don't set ACE_SIZEOF_WCHAR, let Basic_Types just do this. Fixes
          the difference between ACE_SIZEOF_WCHAR and sizeof(wchar_t) on
          the HP aCC test on the IA64 aCC build which runs on the Sep 2006
          version of HPUX

Sat Jan  6 04:41:30 UTC 2007  Chris Cleeland  <cleeland_c@ociweb.com>

        * include/makeinclude/macros.GNU:
        * include/makeinclude/rules.common.GNU:
        * include/makeinclude/rules.local.GNU:

          Added new phony target, "svnignore", which takes a good guess at
          what files are generated in a directory and adds them to
          svn:ignore property on the containing directory.

        * apps/gperf/src:
        * apps/gperf/tests:
        * bin:
        * examples/APG/Active_Objects:
        * examples/APG/Config:
        * examples/APG/Containers:
        * examples/APG/Logging:
        * examples/APG/Misc_IPC:
        * examples/APG/Naming:
        * examples/APG/Proactor: